# csv-tagger

./: README.md
01-spreadsheet/: README.md
02-python-cli/: README.md  pyproject.toml
02-python-cli/py_csv_tagger/: csv_tagger.py
02-python-cli/tests/: test_py_csv_tagger.py
data/: 01-sheet-simple.csv  01-sheet-simple.tsv  02-sheet-annotated.csv  02-sheet-annotated.tsv  03-sheet-dates-one-month.csv  03-sheet-dates-one-month.tsv  sheet-creator.py
