[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-csv-tagger"
version = "0.0.1"
authors = [
  { name="Aliaume LOPEZ", email="aliaume.lopez@irif.fr" },
]
description = "A basic CLI program to annotate CSV files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "pydantic",
]
